--- a/hackathon.html
+++ b/hackathon.html
@@ -17,6 +17,7 @@
             padding: 30px;
             background-color: white;
             align-items: center;
+            margin: auto;
         }
         .b1{
             padding: 15px;
@@ -34,49 +35,29 @@
             color: black;
             float: right;
             border: none;
-            margin-right: 15px;
+            margin-right: 5px;
+        }
+        .b2:hover{
+            cursor: pointer;
+            background-color: rgb(63, 63, 177);
+            text-shadow: 1px;
+        }
+        .b1:hover{
+            cursor: pointer;
+            background-color: lightgreen;
+            text-shadow: 1px;
+            color: blue;
         }
         button{
             align-items: center;
             margin-top: 10%;
             border-radius: 30%;
             justify-items: center;
+            margin: auto;
         }
     </style>
 </head>
 <body>
-    <!-- <form class="row gx-3 gy-2 align-items-center">
-  <div class="col-sm-3">
-    <label class="visually-hidden" for="specificSizeInputName">Name</label>
-    <input type="text" class="form-control" id="specificSizeInputName" placeholder="Jane Doe">
-  </div>
-  <div class="col-sm-3">
-    <label class="visually-hidden" for="specificSizeInputGroupUsername">Username</label>
-    <div class="input-group">
-      <div class="input-group-text">@</div>
-      <input type="text" class="form-control" id="specificSizeInputGroupUsername" placeholder="Username">
-    </div>
-  </div>
-  <div class="col-sm-3">
-    <label class="visually-hidden" for="specificSizeSelect">Preference</label>
-    <select class="form-select" id="specificSizeSelect">
-      <option selected>Choose...</option>
-      <option value="1">One</option>
-      <option value="2">Two</option>
-      <option value="3">Three</option>
-    </select>
-  </div>
-  <div class="col-auto">
-    <div class="form-check">
-      <input class="form-check-input" type="checkbox" id="autoSizingCheck2">
-      <label class="form-check-label" for="autoSizingCheck2">
-        Remember me
-      </label>
-    </div>
-  </div>
-  <div class="col-auto">
-    <button type="submit" class="btn btn-primary">Submit</button>
-  </div> -->
 <div>
     <div class="mb-3">
         <label for="formGroupExampleInput" class="form-label"><E-mai>E-mail</E-mail>:</label>
@@ -91,10 +72,9 @@
         <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="your Password">
       </div>
       <div  class="mb-3">
-        <div class="col col-6">
           <button class="b1" type="loggin" class="btn btn-primary" aria-colcount="red">Register now</button>
-          <button class="b2" type="signup" class="btn btn-primary"> Sign Up</button>
-  </div>
+          <button class="b2" type="signup" class="btn btn-primary" ><a href="logggin.html">Sign Up</a> </button>
+      </div>
     </div>  
 </div>
 
